--- a/www.nass.gov.ng/ddd97e16ad45970a47517af35ecc0b3bfd8465f6.yml
+++ b/www.nass.gov.ng/ddd97e16ad45970a47517af35ecc0b3bfd8465f6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 14:00:21 GMT
+    - Fri, 17 Aug 2018 23:54:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=W6jobNeWzp%2CirAU8svDyX2; path=/
+    - PHPSESSID=RJJR-i4gjeLk1lVP1tV8i2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 14:00:21 GMT
+recorded_at: Fri, 17 Aug 2018 23:54:26 GMT
