--- a/www.nass.gov.ng/b10f2adeac6ce24c281bb88ef7a9bdab3ef51bfd.yml
+++ b/www.nass.gov.ng/b10f2adeac6ce24c281bb88ef7a9bdab3ef51bfd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 14:06:21 GMT
+    - Fri, 17 Aug 2018 23:59:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3Gy4%2CeuVX8ZuIMhq6J0DJ2; path=/
+    - PHPSESSID=YHGx0zOSoqevmiQMbND1V1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 14:06:21 GMT
+recorded_at: Fri, 17 Aug 2018 23:59:53 GMT
