--- a/www.nass.gov.ng/4583a7bb0bea44179d736636faaa51b9d67274f2.yml
+++ b/www.nass.gov.ng/4583a7bb0bea44179d736636faaa51b9d67274f2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 14:10:35 GMT
+    - Sat, 18 Aug 2018 00:04:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FcazaDRG3YZVv6L6%2CNL-g0; path=/
+    - PHPSESSID=IQZ23ss-MkufAVz3JXBiO1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 14:10:36 GMT
+recorded_at: Sat, 18 Aug 2018 00:04:56 GMT
