--- a/www.nass.gov.ng/fb761bc827078936f7b2cc0fcb860c6825429ae6.yml
+++ b/www.nass.gov.ng/fb761bc827078936f7b2cc0fcb860c6825429ae6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 14:43:15 GMT
+    - Sat, 18 Aug 2018 00:35:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Wf%2CinEvjzDQaycsDlXh8S1; path=/
+    - PHPSESSID=NUI7d8zMGwMGUdRPJFtYA2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 14:43:16 GMT
+recorded_at: Sat, 18 Aug 2018 00:36:02 GMT
