--- a/www.nass.gov.ng/78afc8f3702290f20157b26c0888531e810819e3.yml
+++ b/www.nass.gov.ng/78afc8f3702290f20157b26c0888531e810819e3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 14:48:48 GMT
+    - Sat, 18 Aug 2018 00:42:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bCsvNzrH35IIE7U9JkqeZ0; path=/
+    - PHPSESSID=kWm%2CUxQ%2C4RPCoh6wgjFMi3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 14:48:48 GMT
+recorded_at: Sat, 18 Aug 2018 00:42:47 GMT
