--- a/www.nass.gov.ng/0a9438c1b66caf84cd1f5b667ebaa9ad99bba3bb.yml
+++ b/www.nass.gov.ng/0a9438c1b66caf84cd1f5b667ebaa9ad99bba3bb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 14:57:34 GMT
+    - Sat, 18 Aug 2018 00:50:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=q36LlcPZo%2CIIJo48AbPGY3; path=/
+    - PHPSESSID=2QwvKZMjtiaF0bYBjw7m-0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 14:57:34 GMT
+recorded_at: Sat, 18 Aug 2018 00:50:29 GMT
