--- a/www.nass.gov.ng/3603b0230117e06fc37e8509eda0c11f5a2432ff.yml
+++ b/www.nass.gov.ng/3603b0230117e06fc37e8509eda0c11f5a2432ff.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 15:03:40 GMT
+    - Sat, 18 Aug 2018 00:56:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9bJeZ1wYm9-US415Cor%2Ch2; path=/
+    - PHPSESSID=iLHt401q5DHqpqhs3S4tv0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 15:03:41 GMT
+recorded_at: Sat, 18 Aug 2018 00:56:40 GMT
