--- a/www.nass.gov.ng/6d28bd6854ab5ad64490a1e0d9dfa55e96cdee6e.yml
+++ b/www.nass.gov.ng/6d28bd6854ab5ad64490a1e0d9dfa55e96cdee6e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 15:11:54 GMT
+    - Sat, 18 Aug 2018 01:04:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=pytVE8A%2CQagL-gVWdNxZl0; path=/
+    - PHPSESSID=p7MR7wHfcY%2CaDpMlbZD2e1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 15:11:55 GMT
+recorded_at: Sat, 18 Aug 2018 01:04:36 GMT
