--- a/www.nass.gov.ng/29d43b5bc0ecc4a7b466cadf645b35e7ef7153b9.yml
+++ b/www.nass.gov.ng/29d43b5bc0ecc4a7b466cadf645b35e7ef7153b9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 15:14:19 GMT
+    - Sat, 18 Aug 2018 01:06:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ye86-FC0y20qO%2CWSOKS1m2; path=/
+    - PHPSESSID=mnHMQG1H9JXV9HcFiZ3CY2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 15:14:19 GMT
+recorded_at: Sat, 18 Aug 2018 01:06:24 GMT
