--- a/www.nass.gov.ng/d5b0a44e4e0832e7bd28f122b7588587624e94a8.yml
+++ b/www.nass.gov.ng/d5b0a44e4e0832e7bd28f122b7588587624e94a8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 15:20:02 GMT
+    - Sat, 18 Aug 2018 01:13:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=p2xNPxo0P1LMB-P83J9uF1; path=/
+    - PHPSESSID=JkKM7m6Ryb%2CnXL9RoS5kA0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 15:20:02 GMT
+recorded_at: Sat, 18 Aug 2018 01:13:32 GMT
