--- a/www.nass.gov.ng/2cc4b7367015853fc0196ef3ef02f84ccfd5ccd5.yml
+++ b/www.nass.gov.ng/2cc4b7367015853fc0196ef3ef02f84ccfd5ccd5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 15:26:24 GMT
+    - Sat, 18 Aug 2018 01:18:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=U%2CsIPgkfEAcGHBXUIxPrJ0; path=/
+    - PHPSESSID=9WIlA5YxV603a6SNegysW2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 15:26:25 GMT
+recorded_at: Sat, 18 Aug 2018 01:18:31 GMT
