--- a/www.nass.gov.ng/b8e9d97c73acfe51fff28dfe2cdc632ca4faa9d7.yml
+++ b/www.nass.gov.ng/b8e9d97c73acfe51fff28dfe2cdc632ca4faa9d7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 15:28:22 GMT
+    - Sat, 18 Aug 2018 01:19:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XkM-BrFq9n33fdup%2Cp5m80; path=/
+    - PHPSESSID=ECYpYU74Sp0zLASgjVbCt3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 15:28:22 GMT
+recorded_at: Sat, 18 Aug 2018 01:19:22 GMT
