--- a/www.nass.gov.ng/2b2a82aa748928666c604ef6addeff49e48971db.yml
+++ b/www.nass.gov.ng/2b2a82aa748928666c604ef6addeff49e48971db.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 15:34:22 GMT
+    - Sat, 18 Aug 2018 01:26:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ZzKn9IE8vP7l%2CFDgNvaJp1; path=/
+    - PHPSESSID=WSKsV3pvDTqsIKlSkICyi1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 15:34:22 GMT
+recorded_at: Sat, 18 Aug 2018 01:26:05 GMT
