--- a/www.nass.gov.ng/18e5bfa5564c7bfe47ee3b9445fe91c167c870aa.yml
+++ b/www.nass.gov.ng/18e5bfa5564c7bfe47ee3b9445fe91c167c870aa.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 15:50:26 GMT
+    - Sat, 18 Aug 2018 01:41:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CgLCxdAv881acnmDH2RLR1; path=/
+    - PHPSESSID=wVaVnlOxNnANlYzr0yuzb1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 15:50:26 GMT
+recorded_at: Sat, 18 Aug 2018 01:41:39 GMT
