--- a/www.nass.gov.ng/1890bdc512eb7cd7a8e625b99ef9fe7e496575cd.yml
+++ b/www.nass.gov.ng/1890bdc512eb7cd7a8e625b99ef9fe7e496575cd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 15:55:48 GMT
+    - Sat, 18 Aug 2018 01:46:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=oXgHpqg7uUqFvOTq%2CVI2k1; path=/
+    - PHPSESSID=GtrIyBeVizQxufx-xv4j00; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 15:55:49 GMT
+recorded_at: Sat, 18 Aug 2018 01:46:01 GMT
