--- a/www.nass.gov.ng/e4dd0306b3ea756a0c99f4733aa482bb27545683.yml
+++ b/www.nass.gov.ng/e4dd0306b3ea756a0c99f4733aa482bb27545683.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 16:28:02 GMT
+    - Sat, 18 Aug 2018 02:16:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=MOwKvaT2kJxVS%2CllUP2Et3; path=/
+    - PHPSESSID=nN9Ixe-a05bj2CLg6Ew-a3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 16:28:02 GMT
+recorded_at: Sat, 18 Aug 2018 02:16:57 GMT
