--- a/www.nass.gov.ng/b5bc97cbc3a23f4311ab54f026cd3682936f9064.yml
+++ b/www.nass.gov.ng/b5bc97cbc3a23f4311ab54f026cd3682936f9064.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 16:29:59 GMT
+    - Sat, 18 Aug 2018 02:18:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=58JmxbeCHB8-6xQUyUOko3; path=/
+    - PHPSESSID=zz3%2C87rnw-VG%2CJ7rEIXvA0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 16:29:59 GMT
+recorded_at: Sat, 18 Aug 2018 02:18:49 GMT
