--- a/www.nass.gov.ng/50220d338419945d784f3dfca7831b20b425c424.yml
+++ b/www.nass.gov.ng/50220d338419945d784f3dfca7831b20b425c424.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 16:33:45 GMT
+    - Sat, 18 Aug 2018 02:23:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qUkub2oXOAiecZuRi4Guh3; path=/
+    - PHPSESSID=x3WdK0bddlVZZvgf6wS%2Cx0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 16:33:45 GMT
+recorded_at: Sat, 18 Aug 2018 02:23:42 GMT
