--- a/www.nass.gov.ng/b50774622636f1394e913b10f40b89b9c3e789e6.yml
+++ b/www.nass.gov.ng/b50774622636f1394e913b10f40b89b9c3e789e6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 16:34:59 GMT
+    - Sat, 18 Aug 2018 02:24:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LiH3mLwmb51NZjFTD%2C9tM1; path=/
+    - PHPSESSID=QXFCcdac1w9owyKy0Ocv20; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 16:34:59 GMT
+recorded_at: Sat, 18 Aug 2018 02:24:41 GMT
