--- a/www.nass.gov.ng/4067434b512adc3c7ecda3222216195ea7dfefc2.yml
+++ b/www.nass.gov.ng/4067434b512adc3c7ecda3222216195ea7dfefc2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 16:40:47 GMT
+    - Sat, 18 Aug 2018 02:35:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CI4AUdevsfG-4wIQvgnQX2; path=/
+    - PHPSESSID=bwItPmhwBxf2HJWgPG92d3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 16:40:48 GMT
+recorded_at: Sat, 18 Aug 2018 02:35:50 GMT
